--- a/index.html
+++ b/index.html
@@ -3,12 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doramas e mine series</title>
+    <title>Músicas</title>
 </head>
 <body>
     <header>
-        <h1>Beleza verdadeira</h1>
+        <h1>Videos by Music</h1>
     </header>
+   
+    <section>
+        <div class="Uma banda de rock internacional e suas músicas">
+            <h1>Rock</h1>
+            <p>Evanescence</p>
+        </div>
+
+        <div>
+            <iframe width="560" height="315" src="<iframe width="1323" height="744" src="https://www.youtube.com/embed/3YxaaGgTQYM?list=RD3YxaaGgTQYM" 
+            title="Evanescence - Bring Me To Life (Official HD Music Video)" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        </div>
+    </section>
+    <section>
+        <h2>Mais vídeos</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=rqHKwjk6_Gk&list=RDrqHKwjk6_Gk&start_radio=1"
+            <img src="https://img.youtube.com/vi/rqHKwjk6_Gk/maxresdefault.jpg">
+        </a>
+
+        <a href=""
+
+    </a>
+
+
+
+
+
+
+
+
+        </div>
+    </section>
 
 </body>
 </html>
