--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    
     <section>
         <div class="Uma banda de rock internacional e suas músicas">
-            <h1>Rock</h1>
-            <p>Evanescence</p>
+            <h1>Rock and k-pop</h1>
+            <p>Evanescence-Huntix</p>
         </div>
 
         <div>
@@ -27,20 +27,21 @@
     <section>
         <h2>Mais vídeos</h2>
         <div>
-            <a href="https://www.youtube.com/watch?v=rqHKwjk6_Gk&list=RDrqHKwjk6_Gk&start_radio=1"
+            <a href="https://www.youtube.com/watch?v=rqHKwjk6_Gk&list=RDrqHKwjk6_Gk&start_radio=1">
             <img src="https://img.youtube.com/vi/rqHKwjk6_Gk/maxresdefault.jpg">
         </a>
 
-        <a href=""
-
+        <a href="https://www.youtube.com/watch?v=7P-ODFkHd5Y&list=RD7P-ODFkHd5Y&start_radio=1">
+        <img src="https://img.youtube.com/vi/7P-ODFkHd5Y/maxresdefault.jpg">
     </a>
+         
+         <a href="https://www.youtube.com/watch?v=htk6MRjmcnQ&list=RDhtk6MRjmcnQ&start_radio=1">
+         <img src="https://img.youtube.com/vi/htk6MRjmcnQ/maxresdefault.jpg">
+         </a>
 
-
-
-
-
-
-
+         <a href="https://www.youtube.com/watch?v=JaM-fXm3DTA&list=RDJaM-fXm3DTA&start_radio=1">
+         <img src="https://img.youtube.com/vi/JaM-fXm3DTA/maxresdefault.jpg">
+         </a>
 
         </div>
     </section>
